--- a/web-front/src/login.html
+++ b/web-front/src/login.html
@@ -4,33 +4,47 @@
     <meta charset="UTF-8">
     <title>用户登陆</title>
     <link  rel="stylesheet" href="lib/layui-v2.5.6/css/layui.css"/>
-    <script type="text/javascript" src="lib/jquery/jquery.min.js"/>
+ <!--   <script type="text/javascript" src="lib/jquery/jquery.min.js"/>-->
     <script type="text/javascript" src="lib/layui-v2.5.6/layui.js"/>
 </head>
 
-<style type="text/css">
-
+<!--
+<style rel="stylesheet">
+.login-index{width:400px;height: 500px;border: 1px solid cornflowerblue; margin: 50px auto;}
 </style>
+-->
+
 <script type="text/javascript">
-    $(function () {
-        layui.use(["layer","form"],function () {
-            var layer = layui.layer
-            var form = layui.form;
-            layer.msg('Hello World');
-        });
+    //一般直接写在一个js文件中
+    layui.use(['layer', 'form'], function(){
+        var layer = layui.layer
+        var form = layui.form;
+        layer.msg('Hello World');
     });
 </script>
+
 <body>
 <div class="login-index">
     <form class="layui-form layui-form-pane" action="">
         <div class="layui-form-item">
             <label class="layui-form-label">姓名：</label>
-            <div class="layui-input-block">
+            <div class="layui-input-inline">
                 <input type="text" name="userName" autocomplete="off" placeholder="请输入用户名" class="layui-input">
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">密码：</label>
+            <div class="layui-input-inline">
+               <input type="text" name="userName" autocomplete="off" placeholder="请输入密码" class="layui-input">
+            </div>
+        </div>
+
+
 
     </form>
 </div>
+
+
 </body>
+
 </html>
