--- a/web-front/src/login.html
+++ b/web-front/src/login.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>用户登陆</title>
     <link  rel="stylesheet" href="lib/layui-v2.5.6/css/layui.css"/>
- <!--   <script type="text/javascript" src="lib/jquery/jquery.min.js"/>-->
+    <script type="text/javascript" src="lib/jquery-3.4.1/jquery-3.4.1.js"/>
     <script type="text/javascript" src="lib/layui-v2.5.6/layui.js"/>
 </head>
 
@@ -38,12 +39,8 @@
                <input type="text" name="userName" autocomplete="off" placeholder="请输入密码" class="layui-input">
             </div>
         </div>
-
-
-
     </form>
 </div>
-
 
 </body>
 
