--- a/web-front/src/index.html
+++ b/web-front/src/index.html
@@ -2,95 +2,89 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>跨境电商系统管理软件</title>
-  <link rel="stylesheet" href="lib/layui-v2.5.6/css/layui.css">
-  </link>
-  <script src="lib/jquery-3.4.1/jquery-3.4.1.js" type="text/javascript"></script>
-  <script src="lib/layui-v2.5.6/layui.all.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>企业管理系统</title>
+    <link rel="stylesheet" href="lib/layui-v2.5.6/css/layui.css">
+    </link>
+    <script src="lib/jquery-3.4.1/jquery-3.4.1.js" type="text/javascript"></script>
+    <script src="lib/layui-v2.5.6/layui.all.js" type="text/javascript"></script>
 </head>
 <script type="text/javascript">
-  $(document).ready(function () {
-    var element = layui.element;
-    var layer = layui.layer;
-    var form = layui.form;
+    $(document).ready(function () {
+        var element = layui.element;
+        var layer = layui.layer;
+        var form = layui.form;
 
-    element.on('nav(menu)', function (data) {
-      window.console.info(data)
+        element.on('nav(menu)', function (data) {
+            window.console.info(data)
 
 
+        });
+
+        element.init();
     });
-
-    element.init();
-  });
 </script>
 
 
 <body class="layui-layout-body">
-  <div class="layui-layout layui-layout-admin">
+<div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-      <div class="layui-logo">电商管理系统</div>
-      <!-- 头部区域（可配合layui已有的水平导航） -->
-      <ul class="layui-nav layui-layout-left" lay-filter="menu">
-        <li class="layui-nav-item"><a href="javascript:;">商品管理</a></li>
-        <li class="layui-nav-item"><a href="javascript:;">订单管理</a></li>
-        <li class="layui-nav-item"><a href="javascript:;">采购管理</a></li>
-        <li class="layui-nav-item"><a href="javascript:;">库存管理</a></li>
-        <li class="layui-nav-item"><a href="javascript:;">报表管理</a></li>
-        <li class="layui-nav-item"><a href="javascript:;">基础数据</a></li>
-      </ul>
-      <ul class="layui-nav layui-layout-right">
-        <li class="layui-nav-item">
-          <a href="javascript:;">
-            <img src="" class="layui-nav-img">
-            贤心
-          </a>
-          <dl class="layui-nav-child">
-            <dd><a href="">基本资料</a></dd>
-            <dd><a href="">安全设置</a></dd>
-          </dl>
-        </li>
-        <li class="layui-nav-item"><a href="">退了</a></li>
-      </ul>
+        <div class="layui-logo">企业管理系统</div>
+        <ul class="layui-nav layui-layout-right">
+            <li class="layui-nav-item">
+                <a href="javascript:;">
+                    <img src="" class="layui-nav-img">
+                    贤心
+                </a>
+                <dl class="layui-nav-child">
+                    <dd><a href="">基本资料</a></dd>
+                    <dd><a href="">安全设置</a></dd>
+                </dl>
+            </li>
+            <li class="layui-nav-item"><a href="">退了</a></li>
+        </ul>
     </div>
 
     <div class="layui-side layui-bg-black">
-      <div class="layui-side-scroll">
-        <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-        <ul class="layui-nav layui-nav-tree" lay-filter="test">
-          <li class="layui-nav-item layui-nav-itemed">
-            <a class="" href="javascript:;">所有商品</a>
-            <dl class="layui-nav-child">
-              <dd><a href="javascript:;">列表一</a></dd>
-              <dd><a href="javascript:;">列表二</a></dd>
-              <dd><a href="javascript:;">列表三</a></dd>
-              <dd><a href="">超链接</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item">
-            <a href="javascript:;">解决方案</a>
-            <dl class="layui-nav-child">
-              <dd><a href="javascript:;">列表一</a></dd>
-              <dd><a href="javascript:;">列表二</a></dd>
-              <dd><a href="">超链接</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item"><a href="">云市场</a></li>
-          <li class="layui-nav-item"><a href="">发布商品</a></li>
-        </ul>
-      </div>
+        <div class="layui-side-scroll">
+            <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+            <ul class="layui-nav layui-nav-tree" lay-filter="test">
+                <li class="layui-nav-item layui-nav-itemed">
+                    <a class="" href="javascript:;">监控管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">订单同步定时任务</a>
+                        </dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">订单管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">列表一</a></dd>
+                        <dd><a href="javascript:;">列表二</a></dd>
+                        <dd><a href="">超链接</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item"><a href="">采购管理</a></li>
+                <li class="layui-nav-item"><a href="">库存管理</a></li>
+                <li class="layui-nav-item"><a href="">基础数据</a></li>
+                <li class="layui-nav-item"><a href="">系统管理</a></li>
+            </ul>
+        </div>
     </div>
 
     <div class="layui-body">
-      <!-- 内容主体区域 -->
-      <div style="padding: 15px;">内容主体区域</div>
+        <div class="layui-tab" lay-allowClose="true">
+            <ul class="layui-tab-title">
+                <li class="layui-this">首页</li>
+            </ul>
+            <div class="layui-tab-content">
+                <div class="layui-tab-item layui-show">1</div>
+            </div>
+        </div>
     </div>
-    <div class="layui-footer">
-      <div style="text-align: center;">@CopyRight 杭州明慧科技有限公司</div>
-    </div>
-  </div>
 
+</div>
 
 </body>
 
