--- a/web-front/src/index.html
+++ b/web-front/src/index.html
@@ -49,20 +49,20 @@
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-            <ul class="layui-nav layui-nav-tree" lay-filter="test">
+            <ul class="layui-nav layui-nav-tree" lay-filter="menu">
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">监控管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">订单同步定时任务</a>
+                        <dd><a href="javascript:;" id="orderSyn">定时任务配置</a>
                         </dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">订单管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">列表一</a></dd>
-                        <dd><a href="javascript:;">列表二</a></dd>
-                        <dd><a href="">超链接</a></dd>
+                        <dd><a href="javascript:;">零售订单</a></dd>
+                        <dd><a href="javascript:;">电商订单</a></dd>
+                        <dd><a href="javascript:;">收款订单</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="">采购管理</a></li>
