--- a/web-front/src/index.html
+++ b/web-front/src/index.html
@@ -18,7 +18,11 @@
 
         element.on('nav(menu)', function (data) {
             window.console.info(data)
-
+            element.tabAdd('menu_tab', {
+                title: data[0].innerHTML
+                ,content: '选项卡的内容' //支持传入html
+                ,id:  data[0].id
+            });
 
         });
 
@@ -74,7 +78,7 @@
     </div>
 
     <div class="layui-body">
-        <div class="layui-tab" lay-allowClose="true">
+        <div class="layui-tab" lay-allowClose="true" lay-filter="menu_tab">
             <ul class="layui-tab-title">
                 <li class="layui-this">首页</li>
             </ul>
